fix(webgl-media-editor): Crop, Adjust and Filter tabs low contrast in selected and hover states

--- a/packages/webgl-media-editor/src/css/theme.css
+++ b/packages/webgl-media-editor/src/css/theme.css
@@ -32,6 +32,7 @@
 
   /* BUTTON ACTIVE */
   .miru--button.miru--acc {
+    color: var(--color-fnt-acc);
     background-color: var(--color-bg-acc);
     border-color: var(--color-fnt-acc);
   }
